tests/src/Interop/Desktop/PInvoke/Structures/PInvoke/MarshalStructAsParamDLL.h

struct InnerSequential
{
    int f1;
    float f2;
    BSTR f3;
};
struct InnerExplicit1 
{
    INT f1;
    FLOAT f2;
    BSTR f3;
};
struct InnerExplicit2  
{
    int f1;
    float f2;
    BSTR f3;
};
struct InnerArraySequential
{
    InnerSequential arr[NumArrElements];
};
struct InnerArrayExplicit1 
{
    struct InnerSequential arr[2];
#ifndef _WIN64
    char padding[8];
#endif
    BSTR f4;
};
struct InnerArrayExplicit2 
{   
    struct InnerSequential arr[2];
#ifndef _WIN64
    char padding[8];
#endif
    BSTR f4;
};
struct CharSetAnsiSequential
{
    LPCSTR f1;
    CHAR f2;
};
struct CharSetUnicodeSequential 
{
    LPCWSTR f1;
    WCHAR f2;
};
struct NumberSequential 
{
    INT i32;
    UINT ui32;
    SHORT s1;
    WORD us1;
    BYTE b;
    CHAR sb;
    SHORT i16;
    WORD ui16;
    LONG64 i64;
    ULONG64 ui64;
    FLOAT sgl;
    DOUBLE d;
};
struct StructSeqWithArrayField // size = 1032 bytes
{
    BOOL flag;
    LPCSTR str;
    INT vals[256];
};
struct S4 // size = 8 bytes
{
    INT age;

    LPCSTR name;
};
enum Enum1 : INT
{
    e1 = 1,
    e2 = 3 
};
struct StructSeqWithEnumField // size = 8 bytes
{
    struct S4 s4;
    Enum1 ef;
};
struct StringStructSequentialAnsi // size = 8 bytes
{
    BSTR first;
    LPCSTR last;
};
struct StringStructSequentialUnicode // size = 8 bytes
{
    BSTR first;
    LPCWSTR last;
};
struct PritypeStructSeqWithUnmanagedType // size = 32 bytes
{
    BSTR name;
    VARIANT_BOOL gender;
    //CURRENCY wage;//In ProjectN V1, we dont support Marshal Decimal as Currency
    WORD jobNum;
    //HRESULT i32; //In ProjectN V1, we dont support MarshalAs Error 
    //HRESULT ui32;
    CHAR mySByte;
};
struct IntergerStructSequential // size = 4 bytes
{
    INT i;
};
struct StructSequentialWithDelegateField;
typedef void (*TestDelegate1)(struct StructSequentialWithDelegateField myStruct);
struct StructSequentialWithDelegateField // size = 8 bytes
{
    //HRESULT i32;
    TestDelegate1 myDelegate1;
};
struct IncludeOuterIntergerStructSequential1 // size = 8 bytes
{
    INT i;
    struct IntergerStructSequential s_int;
};
struct IncludeOuterIntergerStructSequential // size = 8 bytes
{
    struct IncludeOuterIntergerStructSequential1 s;
};
struct StructSequentialWithPointerField 
{
    LPINT i32;
    INT i;
};
union NumberExplicit 
{
    INT i32;
    UINT ui32;
    LPVOID iPtr;
    LPVOID uiPtr;
    SHORT s;
    WORD us;
    BYTE b;
    CHAR sb;
    LONG64 l;
    ULONG64 ul;
    FLOAT f;
    DOUBLE d;
};
struct ByteStructPack2Explicit // size = 2 bytes
{
    BYTE b1;
    BYTE b2;
};
struct ShortStructPack4Explicit // size = 4 bytes
{
    SHORT s1;
    SHORT s2;
};
struct IntStructPack8Explicit // size = 8 bytes
{
    INT i1;
    INT i2;
};
struct LongStructPack16Explicit // size = 16 bytes
{
    long l1;
    char padding1[4];
    long l2;
    char padding2[4];
};
struct StringExplicit // size = 20 bytes
{
    LPCSTR str1;
#ifndef _WIN64
    char padding1[4];
#endif
    LPCTSTR str2;
#ifndef _WIN64
    char padding2[4];
#endif
    CHAR charr[10];
};